[package]
name = "network-hole-punching"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.3", features = ["http1", "tokio", "ws"] }
axum-server = "0.7.2"
chrono = { version = "0.4.40", features = ["serde"] }
hkdf = "0.12.4"
jsonwebtoken = "9.3.1"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
